[project]
name = "semver-helper"
version = "1.0.0"
description = "Semantic versioning helper for quick version bump decisions"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
